More correct iteration